--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./dist/index.js",
     "dev": "nodemon ./src/index.ts",
     "build": "tsc --build",
+    "ncc": "ncc build src/index.ts -mo dist",
     "test": "jest --coverage"
   },
   "keywords": [],
@@ -28,7 +29,9 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-ui-dist": "^3.30.5",
     "@types/swagger-ui-express": "^4.1.6",
+    "@vercel/ncc": "^0.38.1",
     "csv-parser": "^3.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
